; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/extr_tboot.c_tboot_create_trampoline.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/extr_tboot.c_tboot_create_trampoline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@tboot = common dso_local global %struct.TYPE_2__* null, align 8
@PAGE_SHIFT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"tboot: Error mapping tboot pages (mfns) @ 0x%x, 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @tboot_create_trampoline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tboot_create_trampoline() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @tboot, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @PFN_DOWN(i32 %5)
  store i32 %6, i32* %1, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @tboot, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @PFN_UP(i32 %9)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* @PAGE_SHIFT, align 4
  %13 = shl i32 %11, %12
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @map_tboot_pages(i32 %13, i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %0
  %19 = load i32, i32* %1, align 4
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @panic(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %18, %0
  ret void
}

declare dso_local i32 @PFN_DOWN(i32) #1

declare dso_local i32 @PFN_UP(i32) #1

declare dso_local i64 @map_tboot_pages(i32, i32, i32) #1

declare dso_local i32 @panic(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
